# cmpy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  SIAM.py  _expm_multiply.py  _project.py  analysis.py  compress.py  disp.py  dmft.py  dmrg.py  estimate.py  heusler.py  hubbard.py  ipr.py  ipr2.py  lehmann.py  lehmann_full.py  loc.py  loc2.py  loc_test.py  main.py  mc.py  monte_carlo.py  norm.py  op.py  plots.py  pyproject.toml  requirements.txt  scaling.py  setup.cfg  setup.py  siam.py  siam_v2.py  state.py  state2.py  states.py  (+6 more)
.github/workflows/: pypi-publish.yml  pypi-test-publish.yml  test.yml  test_versioning.yml
_data/: ipr_test1.pkl  ipr_test2.pkl  ipr_test3.pkl  ipr_test4.pkl
_data/Localization/p3-basis/: loclen-e=0.0-soc=0.0.npz  loclen-e=0.0-soc=1.0.npz  loclen-e=0.0-soc=2.0.npz  loclen-e=0.0-soc=3.0.npz
_data/Localization/s-basis/: disorder-e=0-h=1.npz  disorder-e=0-h=16.npz  disorder-e=0-h=8.npz  loclen-e=0.0.npz
_data/Localization2/s-basis/: disorder-e=0-h=16.npz  disorder-e=0-h=4.npz
_data/dft/: HAR1  HAR2
_data/dmft/two_site/: gf_latt_0.pkl  gf_latt_1.pkl  gf_latt_10.pkl  gf_latt_11.pkl  gf_latt_12.pkl  gf_latt_13.pkl  gf_latt_14.pkl  gf_latt_15.pkl  gf_latt_16.pkl  gf_latt_17.pkl  gf_latt_18.pkl  (+16 more)
_data/plots/: dos-2d-M=128.npz  dos-3d-M=16.npz
_imgs/: Test.eps  Test.pgf
cmpy/: __init__.py  _utils.py  _version.py  basis.py  collection.py  cpa.py  disorder.py  dmrg.py  dos.py  exactdiag.py  greens.py  hamiltonian.py  hdf5.py  ising.py  lanczos.py  matrix.py  operators.py  pauli.py  plot.py  spin.py  utils.py
cmpy/core/: __init__.py  basemodel.py  basis.py  bethe.py  data.py  data_manager.py  greens.py  hamiltonian.py  lattice.py  lattice_2.py  math.py  matrix.py  misc.py  operators.py  plotting.py  printing.py  sparse.py  state.py  tightbinding.py  utils.py
cmpy/dmft/: __init__.py  core.py  examples.py  two_site.py  twosite.py  utils.py
cmpy/hubbard/: __init__.py  basis.py  hubbard.py  hubbardmodel.py  state.py
cmpy/linalg/: __init__.py  expm_multiply.py
cmpy/misc/: __init__.py  basis.py  matrix.py  numeric.py  operators.py
cmpy/models/: __init__.py  abc.py  anderson.py  heisenberg.py  hubbard.py  ising.py  lattice_model.py  siam.py  siam2.py  tightbinding.py
cmpy/qmc/: __init__.py  config.py
cmpy/tests/: __init__.py  test_basis.py  test_exactdiag.py  test_matrix.py  test_models_heisenberg.py  test_models_hubbard.py  test_operator.py  test_spin.py
cmpy/tightbinding/: __init__.py  basis.py  device.py  loc.py  loclength.py  tightbinding.py  transport.py
cmpy/transport/: __init__.py  loclength.py  tightbinding.py  transport.py
cmpy2/: __init__.py  heusler.py
cmpy2/core/: __init__.py  data.py  greens.py  lattice.py  matrix.py  plotting.py  printing.py  utils.py
cmpy2/hubbard/: __init__.py  basis.py  hubbard.py
cmpy2/tightbinding/: __init__.py  basis.py  device.py  loclength.py  tightbinding.py
lecture/: cpa.py  excercise3.py  gf_lehmann.py  gf_tevo.py  heisenberg.py
sciutils/: __init__.py  binary.py  data.py  fitting.py  matrix.py  misc.py  plotting.py
sciutils/terminal/: __init__.py  ansi.py  core.py  terminal.py
scripts/: cpa.py  excercise3.py  gf_lehmann.py  gf_tevo.py  heisenberg.py
tests/: __init__.py  test_basis.py  test_matrix.py  test_models_heisenberg.py  test_operator.py  test_spin.py  test_utils.py
tests/core/: basis.py  math.py
(+270 files in other folders)
