[metadata]
name = cmpy
description = Collection of tools for condensed matter computational physics.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dylanljones/cmpy
author = Dylan Jones
author_email = dylanljones94@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source = https://github.com/dylanljones/cmpy

[aliases]
test=pytest

[versioneer]
VCS = git
style = pep440
versionfile_source = cmpy/_version.py
versionfile_build = cmpy/_version.py
tag_prefix =
parentdir_prefix =

[pydocstyle]
add-ignore = D105  # ignore undocumented dunder methods like `__str__`

[flake8]
max-line-length = 88
ignore = D203
per-file-ignores = __init__.py:F401
exclude =
    .git,
    .idea,
    __pycache__,
    build,
    dist,
