[metadata]
name = cmpy
description = Collection of tools for condensed matter computational physics.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dylanljones/cmpy
author = Dylan Jones
author_email = dylanljones94@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Source = https://github.com/dylanljones/cmpy

[options]
packages = find:
install_requires =
    colorcet>=2.0.0
    gftool>=0.10.0
    hypothesis>=6.0.0
    lattpy>=0.7.0
    matplotlib>=3.0.0
    numba>=0.55.0
    numpy>=1.20.3
    pytest>=6.2.0
    pytest-cov>=3.0.0
    scipy>=1.7.1
    setuptools>=60.0.0
    setuptools-scm[toml]>=4.0.0
python_requires = >=3.7
include_package_data = True
platforms = any
zip_safe = False

[options.extras_require]
build =
    wheel>=0.37.0
test =
    hypothesis>=6.0.0
    pytest>=6.2.0
    pytest-cov>=3.0.0

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[pydocstyle]
add-ignore = D105  # ignore undocumented dunder methods like `__str__`

[flake8]
max-line-length = 88
ignore = D203, E203, W503
per-file-ignores = __init__.py:F401,F403
exclude =
    .git,
    .idea,
    __pycache__,
    build,
    dist

[coverage:run]
branch = False
source = cmpy

[coverage:report]
exclude_lines =
    pragma: no cover

    def __repr__
    def __str__

    @abstract

    @property

    raise AssertionError
    raise NotImplementedError

    if 0:
    if __name__ == .__main__.:

ignore_errors = True

omit =
    cmpy/tests/*
    cmpy/linalg/*
    cmpy/dmft/*
    cmpy/models/*
    cmpy/__init__.py
    cmpy/_version.py
    cmpy/_utils.py
    cmpüy/collection.py
